# untype

./: .gitignore  CLAUDE.md  README.md  README_EN.md  pyproject.toml
locales/: en.json  zh.json
personas/: 01_boss.json  02_colleague.json  03_bullets.json
scripts/: record_demo.ps1
src/talk/: __init__.py  audio.py  clipboard.py  config.py  hotkey.py  main.py  tray.py
src/untype/: __init__.py  _platform_darwin.py  _platform_win32.py  clipboard.py  config.py  hotkey.py  i18n.py  llm.py  main.py  overlay.py  persona_dialog.py  platform.py  stt.py  tray.py  wizard.py
